<resources>
    <string name="app_name">Frolicker</string>

    <string name="to_two">"Login"</string>
    <string name="to_three">"Register"</string>
    <string name="to_four">"Confirm"</string>

    <string name="username">"Username"</string>
    <string name="password">"Password"</string>
    <string name="confirm">"Confirm Password"</string>

    <string name="user_key">"userKey"</string>
    <string name="pass_key">"passKey"</string>

    <string name="response">"responseKey"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="expand_search">More Options</string>

    <string name="action_search">Search</string>
    <string name="hint_location">City or Zip Code</string>
    <string name="hint_search">Search for Events</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout">Logout</string>
    <string name="map_view">Map View</string>
    <string name="new_search">New Search</string>
    <string name="search_for_events">Search for Events</string>
    <string name="cityOrzip">City or Zip</string>


    <string-array name="search_order_options_array">
        <item>Date (soonest)</item>
        <item>Date (latest)</item>
        <item>Distance (near to far)</item>
        <item>Distance (far to near)</item>
        <item>Most Relevant</item>
    </string-array>

</resources>
